--- a/3movies/fresh_tomatoes.html
+++ b/3movies/fresh_tomatoes.html
@@ -105,7 +105,7 @@
     <div class="container">
       
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="https://flv.bn.netease.com/videolib3/1506/26/cJtFW2189/HD/cJtFW2189-mobile.mp4" data-toggle="modal" data-target="#trailer">
-    <img src="https://overwatch.nos.netease.com/2/media/Wallpapers/Genji_wallpaper/2048x2048.jpg" width="220" height="342">
+    <img src="http://overwatch.nos.netease.com/2/media/Wallpapers/Genji_wallpaper/2048x2048.jpg" width="220" height="342">
     <h2>Overwatch</h2>
 </div>
 
@@ -120,7 +120,7 @@
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="https://flv.bn.netease.com/videolib3/1605/16/nTaMi2329/HD/nTaMi2329-mobile.mp4" data-toggle="modal" data-target="#trailer">
-    <img src="https://overwatch.nos.netease.com/2/media/videos/dragons-animated-short.jpg" width="220" height="342">
+    <img src="http://overwatch.nos.netease.com/2/media/videos/dragons-animated-short.jpg" width="220" height="342">
     <h2>双龙</h2>
 </div>
 
